<resources>
    <string name="app_name">FeedbackMonkey</string>
    <string name="login">L O G I N</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Não tem uma conta? Registe-se no FeedbackMonkey!</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="signup_continue">Adicionar Informação Opcional</string>
    <string name="first_name">Primeiro Nome</string>
    <string name="last_name">Último Nome</string>
    <string name="phone_number">Telemóvel</string>
    <string name="birth_date">Data de Nascimento (aaaa-mm-dd)</string>
    <string name="location">Localidade</string>
    <string name="submit">Submeter</string>
    <string name="additional_data">Dados Adicionais</string>
    <string name="create_account">Efetuar Registo</string>
    <string name="activate_account">Ative a sua conta aqui!</string>
    <string name="activation_code">Código de Ativação</string>
    <string name="send_activate_account_request">Ativar Conta</string>
    <string name="send_activate_account_and_login_on_register">Ativar Conta e fazer login</string>
    <string name="yes_answer">S I M</string>
    <string name="no_answer">N Ã O</string>
    <string name="zero">0</string>
    <string name="ok">OK</string>
    <string name="suggestion">Sugestão</string>
    <string name="submit_suggestion">Enviar Sugestão</string>
    <string name="write_suggestion_info">Dê-nos a sua sugestão!</string>
    <string name="login_progress_dialog_info">Login em progresso</string>
    <string name="rewrite_password">Reescreva a password</string>
    <string name="reviewed_surveys">As minhas avaliações</string>
    <string name="my_contests_badges">Concursos e Badges</string>
    <string name="suggestion_list">As minhas sugestões</string>
    <string name="info_text_survey_dialog">Informações Inquérito</string>
    <string name="survey_end_date">Data Fim</string>
    <string name="survey_average_time">Tempo Médio</string>
    <string name="survey_items_list_view_header">Items a serem avaliados</string>
    <string name="no_internet_connection">Não existe conexão à Internet!</string>
    <string name="error_parsing_file">Ocorreu um erro na leitura do ficheiro recebido</string>
    <string name="survey_not_availalbe">O inquérito já não se encontra disponivel</string>
    <string name="no_available_surveys">Não existem inquéritos disponiveis de momento</string>
    <string name="no_surveys_with_certain_code">Não existem inquéritos disponiveis com o código</string>
    <string name="password_recovery">Esqueceu-se da sua password?</string>
    <string name="password_recovery_header">Recuperação da Password</string>
    <string name="password_recovery_email_msg">Insira o seu email para receber um código que permitirá a mudança de password</string>
    <string name="password_recovery_code_msg">Insira o código que foi enviado para o seu email para alterar a sua password</string>
    <string name="request_password_recovery_code">Pedir código de recuperação</string>
    <string name="change_password">Alterar Password</string>
    <string name="new_password">Nova Password</string>
    <string name="set_new_password">Registar nova Password</string>
    <string name="account_activation_title">Ativação da Conta</string>
    <string name="account_activation_msg">Insira os dados seguintes para ativar a sua conta</string>
    <string name="account_activation_success">Conta activada com successo!</string>
    <string name="account_activation_error">Ocorreu um erro ao ativar a conta!</string>
    <string name="account_already_activated">A conta já se encontra activada!</string>
    <string name="email_edit_text_error">Preencha o campo com o seu email</string>
    <string name="user_not_registered_error">Utilizador não registado</string>
    <string name="email_dispatch_error">Não foi possível enviar email</string>
    <string name="code_edit_text_error">Por favor insira o código</string>
    <string name="invalid_code_edit_text_error">Código inválido!</string>
    <string name="new_password_msg">Insira a sua nova password</string>
    <string name="empty_password_edit_text_error">Por favor introduza uma password</string>
    <string name="different_password_edit_text_error">Por favor introduza a mesma password</string>
    <string name="not_strong_password_edit_text_error">Password não é forte o suficiente!</string>
    <string name="password_changed_success">Password alterada!</string>
    <string name="fetching_surveys_waiting_dialog">Extraindo Inquéritos</string>
    <string name="submit_suggestion_photo_hint">Clique na câmara para anexar uma foto à sua sugestão</string>
    <string name="functionality_not_implemented">Esta funcionalidade ainda não foi implementada!</string>
    <string name="exit">S A I R</string>
    <string name="answered_surveys">Inquéritos Avaliados</string>
    <string name="question_answer_list">A sua avaliação</string>
    <string name="reviewed_surveys_title">Inquéritos Avaliados</string>
    <string name="no_authentication_token">noAuthToken</string>
    <string name="no_profile_picture">noProfilePicture</string>
    <string name="info_not_available">Não disponível        </string>
</resources>
