<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@android:style/Theme.NoTitleBar.Fullscreen">


    <EditText
        android:id="@+id/newPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableLeft="@drawable/ic_vpn_key_black_18dp"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_vpn_key_black_18dp"
        android:ems="10"
        android:fontFamily="@font/roboto_thin"
        android:hint="@string/new_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/rewriteNewPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableLeft="@drawable/ic_vpn_key_black_18dp"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_vpn_key_black_18dp"
        android:ems="10"
        android:fontFamily="@font/roboto_thin"
        android:hint="@string/rewrite_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/setNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/yellow_button"
        android:text="@string/set_new_password"
        android:textColor="#3D3D3D"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>