<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@android:style/Theme.NoTitleBar.Fullscreen">


    <TextView
        android:id="@+id/additionalDataInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:fontFamily="@font/roboto_mono_medium"
        android:gravity="center"
        android:text="@string/additional_data"
        android:textColor="#3D3D3D"
        android:textSize="24sp"
        android:textStyle="normal|bold" />

    <ImageView
        android:id="@+id/signupOptionalInfoImage"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        app:srcCompat="@drawable/feedback_monkey_small" />

    <EditText
        android:id="@+id/signupLocationText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:drawableLeft="@drawable/ic_location_on_black_18dp"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_location_on_black_18dp"
        android:ems="10"
        android:fontFamily="@font/roboto_thin"
        android:hint="@string/location"
        android:inputType="text" />

    <EditText
        android:id="@+id/signupBirthDateText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:drawableLeft="@drawable/ic_calendar_black_18dp"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_calendar_black_18dp"
        android:ems="10"
        android:fontFamily="@font/roboto_thin"
        android:hint="@string/birth_date"
        android:inputType="date" />

    <Button
        android:id="@+id/signupRequestButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:background="@drawable/yellow_button"
        android:text="@string/create_account"
        android:textColor="#3D3D3D"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>