<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
    tools:context=".application.SubmitSuggestionActivity">

    <Button
        android:id="@+id/submitSuggestionButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="349dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="416dp"
        android:background="@drawable/yellow_button"
        android:fontFamily="@font/roboto_mono_medium"
        android:gravity="center"
        android:text="@string/submit_suggestion"
        android:textColor="#3D3D3D"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitSuggestionEditText"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/submitSuggestionEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:ems="10"
        android:fontFamily="@font/fabrica_font"
        android:hint="@string/suggestion"
        android:inputType="textMultiLine"
        android:lines="4"
        android:maxLines="10"
        android:minLines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/submitSuggestionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/fabrica_font"
        android:text="@string/write_suggestion_info"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/submitSuggestionEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>