<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffd05b">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="715dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:background="#FFFFFF"
        android:theme="@android:style/Theme.NoTitleBar.Fullscreen">

        <EditText
            android:id="@+id/signUpPopUpLocationTextView"
            android:layout_width="333dp"
            android:layout_height="49dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/ic_location_on_black_18dp"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_location_on_black_18dp"
            android:ems="10"
            android:fontFamily="@font/roboto_thin"
            android:inputType="textPersonName"
            android:text="@string/location"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/signUpPopUpBirthDateTextView"
            android:layout_width="333dp"
            android:layout_height="49dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/ic_calendar_black_18dp"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_calendar_black_18dp"
            android:fontFamily="@font/roboto_thin"
            android:hint="@string/birth_date"
            android:inputType="date"
            android:textColorHint="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.695" />

        <TextView
            android:id="@+id/signUpPopUpInfoTextView"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_mono_medium"
            android:text="@string/additional_data"
            android:textColor="#3d3d3d"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.037" />

        <Button
            android:id="@+id/signUpPopUpSubmitAdditionalInfoButton"
            android:layout_width="333dp"
            android:layout_height="49dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/white_button"
            android:fontFamily="@font/roboto_mono_medium"
            android:text="@string/create_account"
            android:textColor="#3d3d3d"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.869" />

        <ImageView
            android:id="@+id/signUpPopUpImgView"
            android:layout_width="220dp"
            android:layout_height="210dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.17"
            app:srcCompat="@drawable/feedback_monkey_small" />

    </android.support.constraint.ConstraintLayout>
</RelativeLayout>